fixing image skew on mobile

--- a/src/templates/project.module.scss
+++ b/src/templates/project.module.scss
@@ -93,4 +93,7 @@ section.pic-overview {
   display: flex;
   justify-content: center;
   width: 100%;
+  img {
+    align-self: center;
+  }
 }
